# loto-keno

./: CMakeLists.txt  LICENSE  README.md
data/: loto-keno.desktop  loto-keno.rc
src/: CMakeLists.txt  draw.c  font.c  font.h  game.c  icon.c  lang.c  lang.h  loto-keno.c  loto-keno.h  loto-keno.rc
